# uneex_LAD2025

./: .gitignore
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c
06_Tracing/tests/: test.sh
07_Environmental/: CMakeLists.txt  rhasher.c
07_Environmental/tests/: check_hashes.sh
08_I18n/: CMakeLists.txt  guesser.c
08_I18n/lang/: ru_RU.po
09_PatchDiff/: 00_arg_size.patch  01_arg_chars.patch  02_arg_seed.patch  Makefile  maze.c
10_LibTesting/: CMakeLists.txt
10_LibTesting/include/: growbuf.h
10_LibTesting/src/: growbuf.c
10_LibTesting/tests/: test_bench.c  test_grow.c  test_init.c  test_pop.c  test_push.c  utils.h
11_Documenting/: CMakeLists.txt
11_Documenting/docs/: Doxyfile.in
11_Documenting/lang/: ru_RU.po
11_Documenting/src/: guesser.c
12_InstallPackaging/: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  install.sh  uninstall.sh
12_InstallPackaging/doc/: Doxyfile.in
12_InstallPackaging/include/: roman_nums.h
12_InstallPackaging/lang/: ru_RU.po
12_InstallPackaging/src/: guesser.c  roman_nums.c
12_InstallPackaging/tests/: test_dec2roman.c  test_roman2dec.c  test_round.c  utils.h
